--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -145,3 +145,39 @@ p{
 .card:hover .image-wrapper{
     opacity: .3;
 }
+
+#secao-orcamento{
+    height: 100vh;
+    margin: 3rem;
+}
+
+#secao-orcamento h2{
+    font-family: var(--font-titulo);
+}
+
+#secao-orcamento form{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    max-width: 500px;
+    margin: 0 auto;
+    gap: 1rem;
+    
+}
+
+.campo{
+    display: flex;
+    flex-direction: column;
+}
+
+.linha{
+    grid-column: 1 / 3;
+}
+
+#imagem{
+    display: flex;
+    flex-direction: column
+}
+
+#botao{
+
+}
