--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+    --color-destaque: #191654;
+    --color-padrao: #43C6AC;
+    --color-preto: #24252a;
+    --color-branco: #ECECEC;
+    --font-titulo: "Montserrat", sans-serif;
+    --font-body: "Poppins", sans-serif;
+}
+
+
 
 body{
     margin: 0px;
@@ -173,11 +183,12 @@ p{
     grid-column: 1 / 3;
 }
 
-#imagem{
-    display: flex;
-    flex-direction: column
+button{
+    text-align: center;
+    
 }
 
-#botao{
-
+button:hover{
+    text-align: center;
+    background-color: var(--color-branco);
 }
