--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -3,7 +3,7 @@
 :root{
     --color-destaque: #191654;
     --color-padrao: #43C6AC;
-    --color-preto: #24252a;
+    --color-preto: #333;
     --color-branco: #ECECEC;
     --font-titulo: "Montserrat", sans-serif;
     --font-body: "Poppins", sans-serif;
@@ -13,6 +13,7 @@
 
 body{
     margin: 0px;
+    background-color: #ecf0f1;
 }
 
 main{
@@ -21,8 +22,9 @@ main{
 }
 
 header{
-    background-color: #24252a;
+    background-color: var(--color-preto);
     box-shadow: 0px 3px 10px #464646;
+    size: 10rem;
 }
 
 h1{
@@ -45,12 +47,19 @@ img {
     max-width: auto;
     max-height: auto;
     display: block;
-    width: 500px
+    width: 500px;
+
 }
 
 p{
     font-family: "Poppins", sans-serif;
     font-size: large;
+
+}
+
+a{
+    color: var(--color-destaque);
+    text-decoration: none;
 }
 
 .nav-bar ul{
@@ -77,8 +86,36 @@ p{
     float: left;
 }
 
+.nav-bar input{
+    padding: 8px;
+    width: 200px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin: 10px    ;
+    float: right;
+}
 
-/* linha teste */
+
+.conteudo_dropdown {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .conteudo_dropdown a {
+    color: #fff;
+    padding: 12px 16px;
+    display: block;
+    color: var(--color-padrao);
+    font-family: var(--font-titulo);
+  }
+  
+  .dropdown:hover .conteudo_dropdown {
+    display: block;
+  }
+
 
 #secao-apresentacao{
     display: flex;
@@ -183,6 +220,13 @@ p{
     grid-column: 1 / 3;
 }
 
+
+.twitter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 button{
     text-align: center;
     
@@ -191,4 +235,37 @@ button{
 button:hover{
     text-align: center;
     background-color: var(--color-branco);
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+	margin-top: 50px;
+}
+
+.footer_nav {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.footer_nav li {
+	display: inline-block;
+	margin: 0 10px;
+}
+
+.footer_nav a{
+    color: #43C6AC;
+    text-decoration: none;
+}
+
+
+.footer_nav a:hover{
+    color: var(--color-destaque)
+}
+
+ol{
+    text-decoration: solid;
 }
